<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lib_finch_name">Finch</string>
    <string name="lib_finch_category_notification">Finch notifications</string>
    <string name="lib_finch_clear">Clear</string>
    <string name="lib_finch_browse_sql_database">Browse SQLite database</string>
    <string name="lib_finch_overview">Overview</string>
    <string name="lib_finch_request">Request</string>
    <string name="lib_finch_response">Response</string>
    <string name="lib_finch_url">URL</string>
    <string name="lib_finch_method">Method</string>
    <string name="lib_finch_protocol">Protocol</string>
    <string name="lib_finch_status">Status</string>
    <string name="lib_finch_ssl">SSL</string>
    <string name="lib_finch_request_time">Request time</string>
    <string name="lib_finch_response_time">Response time</string>
    <string name="lib_finch_duration">Duration</string>
    <string name="lib_finch_request_size">Request size</string>
    <string name="lib_finch_response_size">Response size</string>
    <string name="lib_finch_total_size">Total size</string>
    <string name="lib_finch_yes">Yes</string>
    <string name="lib_finch_no">No</string>
    <string name="lib_finch_share">Share</string>
    <string name="lib_finch_share_as_text">Share as text</string>
    <string name="lib_finch_share_as_curl">Share as curl command</string>
    <string name="lib_finch_body_omitted">(encoded or binary body omitted)</string>
    <string name="lib_finch_search">Search</string>
    <string name="lib_finch_body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="lib_finch_body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="lib_finch_notification_title">Traffic Monitoring</string>
    <string name="lib_finch_share_as_file">Share as .txt</string>
    <string name="lib_finch_share_as_json">Share response as .json</string>
</resources>
