<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/lib_finch_ic_search"
        android:title="@string/lib_finch_search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:icon="@drawable/lib_finch_ic_share"
        android:title="@string/lib_finch_share"
        app:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/share_text"
                    android:title="@string/lib_finch_share_as_text" />
                <item
                    android:id="@+id/share_file"
                    android:title="@string/lib_finch_share_as_file" />
                <item
                    android:id="@+id/share_json"
                    android:title="@string/lib_finch_share_as_json"
                    android:visible="false" />
                <item
                    android:id="@+id/share_curl"
                    android:title="@string/lib_finch_share_as_curl" />
            </group>
        </menu>
    </item>
</menu>